# wakatta

./: .gitignore  README.md  ctd.py  dictionary.py  kanji.py  kanjivg_db.py  main.py  plan.md  pyproject.toml  reading_order.py  resort_pages.py  server.py  setup_jmdict.py  setup_kanjidic.py  setup_kanjivg.py  setup_pitch_accents.py  test_handwriting.py
static/: index.html  manifest.json  page-reader.html  reader.html  recognizer.js  sw.js
