[project]
name = "wakatta"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "colorama>=0.4.6",
    "fastapi>=0.138.1",
    "fugashi[unidic]>=1.5.2",
    "httpx>=0.28.1",
    "lxml>=6.1.1",
    "manga-ocr>=0.1.14",
    "opencv-python>=4.13.0.92",
    "pyclipper>=1.4.0",
    "pymupdf>=1.27.2.3",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.32",
    "shapely>=2.1.2",
    "sqlalchemy>=2.0",
    "svg-path>=7.0",
    "torchvision>=0.27.1",
    "uvicorn>=0.49.0",
]
